--- a/Illuminated/UI/MusicViewController/MusicViewController.xib
+++ b/Illuminated/UI/MusicViewController/MusicViewController.xib
@@ -24,7 +24,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" tableStyle="fullWidth" selectionHighlightStyle="sourceList" alternatingRowBackgroundColors="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" headerView="GVQ-8a-sad" viewBased="YES" id="DZz-rI-PZn">
-                                <rect key="frame" x="0.0" y="0.0" width="605" height="248"/>
+                                <rect key="frame" x="0.0" y="0.0" width="652" height="248"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <size key="intercellSpacing" width="17" height="0.0"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -61,7 +61,7 @@
                                             </tableCellView>
                                         </prototypeCellViews>
                                     </tableColumn>
-                                    <tableColumn identifier="SongColumn" editable="NO" width="143" minWidth="40" maxWidth="1000" id="54g-S0-Kbo">
+                                    <tableColumn identifier="SongColumn" editable="NO" width="188" minWidth="40" maxWidth="1000" id="54g-S0-Kbo">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Song">
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
@@ -74,11 +74,11 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="yhh-Mk-2vy">
-                                                <rect key="frame" x="73" y="0.0" width="143" height="24"/>
+                                                <rect key="frame" x="73" y="0.0" width="188" height="24"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xGJ-wn-K5K">
-                                                        <rect key="frame" x="0.0" y="4" width="143" height="16"/>
+                                                        <rect key="frame" x="0.0" y="4" width="188" height="16"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="MHn-ij-ibl">
                                                             <font key="font" usesAppearanceFont="YES"/>
@@ -106,7 +106,7 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="kd5-lx-8Zb">
-                                                <rect key="frame" x="233" y="0.0" width="123" height="17"/>
+                                                <rect key="frame" x="278" y="0.0" width="123" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s7w-Dk-W2z">
@@ -125,8 +125,8 @@
                                             </tableCellView>
                                         </prototypeCellViews>
                                     </tableColumn>
-                                    <tableColumn identifier="AlbumColumn" editable="NO" width="84" minWidth="10" maxWidth="3.4028234663852886e+38" id="QjL-AG-MDb">
-                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Album">
+                                    <tableColumn identifier="BPMColumn" editable="NO" width="86" minWidth="10" maxWidth="3.4028234663852886e+38" id="QjL-AG-MDb">
+                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="BPM">
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </tableHeaderCell>
@@ -138,11 +138,11 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="dAa-Yw-U65">
-                                                <rect key="frame" x="373" y="0.0" width="84" height="17"/>
+                                                <rect key="frame" x="418" y="0.0" width="86" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TlT-ad-Ib7">
-                                                        <rect key="frame" x="0.0" y="1" width="84" height="16"/>
+                                                        <rect key="frame" x="0.0" y="1" width="86" height="16"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                                         <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="e0z-Tm-Tgj">
                                                             <font key="font" usesAppearanceFont="YES"/>
@@ -170,7 +170,7 @@
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
                                             <tableCellView id="HPE-7G-6Ek">
-                                                <rect key="frame" x="474" y="0.0" width="112" height="17"/>
+                                                <rect key="frame" x="521" y="0.0" width="112" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
                                                     <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4FV-2I-2ju">
@@ -194,7 +194,7 @@
                         </subviews>
                         <nil key="backgroundColor"/>
                     </clipView>
-                    <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="DMT-Lx-v0Z">
+                    <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="DMT-Lx-v0Z">
                         <rect key="frame" x="1" y="261" width="605" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
@@ -203,7 +203,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <tableHeaderView key="headerView" wantsLayer="YES" id="GVQ-8a-sad">
-                        <rect key="frame" x="0.0" y="0.0" width="605" height="28"/>
+                        <rect key="frame" x="0.0" y="0.0" width="652" height="28"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </tableHeaderView>
                 </scrollView>
