Add media player controls + playlist name editing + various visual bugs

--- a/Illuminated/UI/PlayerBarViewController/PlayerBarViewController.xib
+++ b/Illuminated/UI/PlayerBarViewController/PlayerBarViewController.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="23727" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
+        <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23727"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -59,6 +60,9 @@
                             <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="play.circle.fill" catalog="system" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="yxt-nZ-PXW">
                                 <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                 <font key="font" metaFont="systemLight" size="13"/>
+                                <string key="keyEquivalent" base64-UTF8="YES">
+IA
+</string>
                             </buttonCell>
                             <symbolConfiguration key="symbolConfiguration" configurationType="font" scale="large">
                                 <nil key="locale"/>
