--- a/Illuminated/UI/PlayerBarViewController/PlayerBarViewController.xib
+++ b/Illuminated/UI/PlayerBarViewController/PlayerBarViewController.xib
@@ -15,13 +15,13 @@
                 <outlet property="nextButton" destination="Gp2-4J-BpA" id="pw8-tT-rnI"/>
                 <outlet property="playPauseButton" destination="kae-9T-afl" id="6MX-Hi-TtQ"/>
                 <outlet property="previousButton" destination="B5k-ad-Hyg" id="AWq-cR-1kC"/>
-                <outlet property="progressSlider" destination="8DK-dt-Zb1" id="hz6-LN-C1L"/>
                 <outlet property="repeatButton" destination="wwS-Z7-2Si" id="E62-6J-tZG"/>
                 <outlet property="totalTimeLabel" destination="uvO-Z0-veq" id="sTp-4l-Qzv"/>
                 <outlet property="trackArtwork" destination="cso-Vn-14Z" id="lOk-0O-vLL"/>
                 <outlet property="trackTitle" destination="g3Z-pj-EbQ" id="gFf-hL-cQX"/>
                 <outlet property="view" destination="c22-O7-iKe" id="MFr-D6-W5o"/>
                 <outlet property="volumeSlider" destination="XKA-cv-r4Z" id="wKO-0E-xkh"/>
+                <outlet property="waveformView" destination="G7n-4Y-KCD" id="Bqe-T6-B62"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
@@ -144,15 +144,6 @@ IA
                         <real value="3.4028234663852886e+38"/>
                     </customSpacing>
                 </stackView>
-                <slider verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8DK-dt-Zb1">
-                    <rect key="frame" x="18" y="101" width="764" height="28"/>
-                    <sliderCell key="cell" state="on" alignment="left" maxValue="1" tickMarkPosition="above" sliderType="linear" id="5Xc-4S-ciZ">
-                        <font key="font" metaFont="cellTitle"/>
-                    </sliderCell>
-                    <connections>
-                        <action selector="progressDidChange:" target="-2" id="Wyo-92-Tpq"/>
-                    </connections>
-                </slider>
                 <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="I6e-1A-WvN">
                     <rect key="frame" x="20" y="94" width="31" height="13"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="ZxY-gh-JyR">
@@ -162,7 +153,7 @@ IA
                     </textFieldCell>
                 </textField>
                 <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="uvO-Z0-veq">
-                    <rect key="frame" x="751" y="94" width="31" height="13"/>
+                    <rect key="frame" x="750" y="94" width="32" height="13"/>
                     <textFieldCell key="cell" lineBreakMode="clipping" title="Label" id="Fjl-is-T6w">
                         <font key="font" textStyle="footnote" name=".SFNS-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -211,23 +202,28 @@ IA
                         <real value="3.4028234663852886e+38"/>
                     </customSpacing>
                 </stackView>
+                <customView translatesAutoresizingMaskIntoConstraints="NO" id="G7n-4Y-KCD" customClass="WaveformView">
+                    <rect key="frame" x="75" y="78" width="650" height="46"/>
+                </customView>
             </subviews>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="uvO-Z0-veq" secondAttribute="trailing" constant="20" symbolic="YES" id="372-bm-4rs"/>
-                <constraint firstItem="8DK-dt-Zb1" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="3" id="5WN-5I-DRU"/>
                 <constraint firstItem="Iep-vN-JHC" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" constant="10" id="Ak0-b4-9mV"/>
-                <constraint firstItem="8DK-dt-Zb1" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="20" symbolic="YES" id="Gu1-5S-rgE"/>
+                <constraint firstItem="G7n-4Y-KCD" firstAttribute="leading" secondItem="I6e-1A-WvN" secondAttribute="trailing" constant="26" id="FHb-rL-cwZ"/>
                 <constraint firstItem="ESG-gD-635" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" constant="10" id="H7b-bb-Ypq"/>
                 <constraint firstAttribute="bottom" secondItem="cso-Vn-14Z" secondAttribute="bottom" constant="17" id="MZs-Wd-PHG"/>
                 <constraint firstItem="I6e-1A-WvN" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="22" id="SZM-qm-so8"/>
-                <constraint firstAttribute="trailing" secondItem="8DK-dt-Zb1" secondAttribute="trailing" constant="20" symbolic="YES" id="Sag-TV-ueJ"/>
+                <constraint firstItem="uvO-Z0-veq" firstAttribute="leading" secondItem="G7n-4Y-KCD" secondAttribute="trailing" constant="27" id="Uhc-W8-nkq"/>
+                <constraint firstItem="G7n-4Y-KCD" firstAttribute="centerY" secondItem="uvO-Z0-veq" secondAttribute="centerY" id="W2w-SN-UfC"/>
+                <constraint firstItem="G7n-4Y-KCD" firstAttribute="centerY" secondItem="I6e-1A-WvN" secondAttribute="centerY" id="WIS-bV-qeS"/>
                 <constraint firstAttribute="bottom" secondItem="Ct6-K7-tLJ" secondAttribute="bottom" constant="17" id="ZdS-go-Jly"/>
                 <constraint firstItem="Ct6-K7-tLJ" firstAttribute="leading" secondItem="cso-Vn-14Z" secondAttribute="trailing" constant="10" id="ZiO-Xu-5QT"/>
                 <constraint firstItem="Iep-vN-JHC" firstAttribute="centerX" secondItem="c22-O7-iKe" secondAttribute="centerX" id="khE-tx-0Ih"/>
                 <constraint firstItem="cso-Vn-14Z" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="20" id="laG-eu-8mW"/>
+                <constraint firstItem="ESG-gD-635" firstAttribute="top" secondItem="G7n-4Y-KCD" secondAttribute="bottom" constant="16" id="nxm-YV-osH"/>
+                <constraint firstItem="G7n-4Y-KCD" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" constant="6" id="qlQ-NR-hSb"/>
                 <constraint firstAttribute="trailing" secondItem="ESG-gD-635" secondAttribute="trailing" constant="20" symbolic="YES" id="s2w-78-Kc3"/>
-                <constraint firstItem="uvO-Z0-veq" firstAttribute="top" secondItem="8DK-dt-Zb1" secondAttribute="bottom" id="sR2-Tm-Trp"/>
-                <constraint firstItem="I6e-1A-WvN" firstAttribute="top" secondItem="8DK-dt-Zb1" secondAttribute="bottom" id="yqa-2M-Ppw"/>
+                <constraint firstItem="G7n-4Y-KCD" firstAttribute="centerX" secondItem="Iep-vN-JHC" secondAttribute="centerX" id="vVp-vm-afe"/>
             </constraints>
             <point key="canvasLocation" x="-62" y="-17"/>
         </customView>
