--- a/Illuminated/UI/SidebarViewController/FilesSidebarViewController/FilesSidebarViewController.xib
+++ b/Illuminated/UI/SidebarViewController/FilesSidebarViewController/FilesSidebarViewController.xib
@@ -6,52 +6,52 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="SidebarViewController">
+        <customObject id="-2" userLabel="File's Owner" customClass="FileBrowserViewController">
             <connections>
-                <outlet property="outlineView" destination="fR5-u7-wRG" id="keL-m2-QNK"/>
-                <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
+                <outlet property="outlineView" destination="iAK-SA-VFV" id="W8Y-1L-xja"/>
+                <outlet property="view" destination="c22-O7-iKe" id="Aqi-Oz-TPB"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="195" height="340"/>
+        <customView id="c22-O7-iKe">
+            <rect key="frame" x="0.0" y="0.0" width="235" height="345"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mni-Ta-VIf">
-                    <rect key="frame" x="0.0" y="0.0" width="195" height="340"/>
+                <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Coe-qu-Kfo">
+                    <rect key="frame" x="0.0" y="0.0" width="235" height="345"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <clipView key="contentView" id="1Bv-dk-P7q">
-                        <rect key="frame" x="1" y="1" width="193" height="338"/>
+                    <clipView key="contentView" id="K0o-tA-NJF">
+                        <rect key="frame" x="1" y="1" width="233" height="343"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" headerView="VE9-K9-ozh" viewBased="YES" indentationPerLevel="13" outlineTableColumn="uAF-BP-JhV" id="fR5-u7-wRG">
-                                <rect key="frame" x="0.0" y="0.0" width="195" height="310"/>
+                            <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" rowSizeStyle="automatic" headerView="ehz-Sw-DIW" viewBased="YES" indentationPerLevel="13" outlineTableColumn="jVh-tv-7Vy" id="iAK-SA-VFV">
+                                <rect key="frame" x="0.0" y="0.0" width="233" height="315"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <size key="intercellSpacing" width="17" height="0.0"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="AutomaticTableColumnIdentifier.0" width="183" minWidth="40" maxWidth="1000" id="uAF-BP-JhV">
+                                    <tableColumn identifier="AutomaticTableColumnIdentifier.0" width="219" minWidth="40" maxWidth="1000" id="jVh-tv-7Vy">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
                                         </tableHeaderCell>
-                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="40W-FQ-qWd">
+                                        <textFieldCell key="dataCell" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="4Nx-LR-oRO">
                                             <font key="font" metaFont="system"/>
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
-                                            <tableCellView id="c0n-GG-acs">
-                                                <rect key="frame" x="8" y="0.0" width="178" height="24"/>
+                                            <tableCellView id="Ufw-4j-W0L">
+                                                <rect key="frame" x="8" y="0.0" width="214" height="24"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
-                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0vT-RH-FrX">
-                                                        <rect key="frame" x="34" y="1" width="144" height="16"/>
+                                                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oH2-5h-qSj">
+                                                        <rect key="frame" x="0.0" y="4" width="214" height="16"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
-                                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="ZdF-P3-zSb">
+                                                        <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="DRK-jf-hfC">
                                                             <font key="font" usesAppearanceFont="YES"/>
                                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -59,7 +59,7 @@
                                                     </textField>
                                                 </subviews>
                                                 <connections>
-                                                    <outlet property="textField" destination="0vT-RH-FrX" id="Sf9-cv-LKq"/>
+                                                    <outlet property="textField" destination="oH2-5h-qSj" id="oN5-Op-KuM"/>
                                                 </connections>
                                             </tableCellView>
                                         </prototypeCellViews>
@@ -68,21 +68,21 @@
                             </outlineView>
                         </subviews>
                     </clipView>
-                    <scroller key="horizontalScroller" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="0Hr-rc-oAs">
-                        <rect key="frame" x="1" y="323" width="193" height="16"/>
+                    <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="WCL-kU-lFd">
+                        <rect key="frame" x="1" y="328" width="233" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="gex-lf-jWs">
+                    <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="MlF-bT-U9p">
                         <rect key="frame" x="224" y="17" width="15" height="102"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
-                    <tableHeaderView key="headerView" wantsLayer="YES" id="VE9-K9-ozh">
-                        <rect key="frame" x="0.0" y="0.0" width="195" height="28"/>
+                    <tableHeaderView key="headerView" wantsLayer="YES" id="ehz-Sw-DIW">
+                        <rect key="frame" x="0.0" y="0.0" width="233" height="28"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </tableHeaderView>
                 </scrollView>
             </subviews>
-            <point key="canvasLocation" x="-128.5" y="101"/>
+            <point key="canvasLocation" x="-106.5" y="172.5"/>
         </customView>
     </objects>
 </document>
